--- a/Titanic_machine_learning_from_disaster.ipynb
+++ b/Titanic_machine_learning_from_disaster.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Titanic machine learning from disaster.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP1stezlEI5VxrQdDprsnb3",
+      "authorship_tag": "ABX9TyOg4da7Hcpt2g8oUEJRLS/z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -765,9 +765,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "ogdg3ZJskku0",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://bit.ly/2tYpeaX\" target=\"_blank\">visit profile report</a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9er19lXbo5gV",
         "colab_type": "code",
         "colab": {}
       },
